[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-enum"
version = "1.0.0"
description = "Active Directory DC Users Enumeration Tool"
authors = [
    { name = "Renato Brescia", email = "killercd@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "ldap3",
    "tabulate",
    "colorama"
]

[project.scripts]
dc-enum = "dc_enum.cli:main"

